--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "sql-ai-dashboard-backend",
+  "name": "sql-dashboard-backend",
   "type": "module",
   "version": "1.0.0",
-  "description": "Backend for AI-powered SQL activity dashboard",
-  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "@rodrigogs/mysql-events": "^0.6.0",
-    "@xata.io/client": "^0.30.1",
-    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "diff": "^8.0.2",
     "dotenv": "^16.3.1",
-    "express": "^4.21.2",
-    "mariadb": "^3.4.5",
-    "mysql2": "^3.15.3",
-    "socket.io": "^4.8.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
+    "socket.io": "^4.7.2",
     "zongji": "^0.5.1"
   },
   "devDependencies": {
